--- a/style.css
+++ b/style.css
@@ -32,3 +32,17 @@ a:hover {
 #app {
     padding-top: 2.5em;
 }
+
+#numHashtags {
+    padding-top: 1.5em;
+    padding-bottom: 1.5em;
+}
+
+#scrambledHashtags > .hashtagDisplay {
+    padding-top: 1em;
+    padding-bottom: 2em;
+}
+
+#scrambledHashtags > button {
+    margin-top: 1em;
+}
